--- a/services/mongo-service.yaml
+++ b/services/mongo-service.yaml
@@ -5,7 +5,7 @@ metadata:
     name: mongo
   name: mongo
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 27017
       targetPort: 27017
